# mpc-101

./: .dockerignore  Cargo.toml  Dockerfile  README.md  fly.toml
crates/mpc-demo-cli/: Cargo.toml
crates/mpc-demo-cli/src/: cli.rs  dkg.rs  main.rs  protocol.rs  sign.rs
crates/mpc-server/: Cargo.toml
crates/mpc-server/src/: main.rs  protocol.rs  routes.rs  state.rs  types.rs
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  ELI5Context.tsx  api.ts  eli5.ts  index.css  types.ts
frontend/src/components/: NodeGraph.tsx  NodePanel.tsx  SignaturePanel.tsx  StepControls.tsx  TransactionPanel.tsx  TxPreviewPanel.tsx
